fixed quote legibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    flex-wrap: ;
+    flex-wrap: wrap;
 }
 
 p {
@@ -36,7 +36,7 @@ p {
     border-radius: 10px;
     border-width: 0px;
     margin-top: 5vh;
-    margin-left: 5vw;
+    margin-left: 35vw;
 }
 
 .hero {
